<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.home.HomeFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/light_gray">

            <ImageView
                android:id="@+id/app_logo"
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:src="@drawable/ic_location"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="@string/description_app_logo" />

            <TextView
                android:id="@+id/create_alarm_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textColor="@color/black"
                android:textSize="28sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/app_logo"
                app:layout_constraintBottom_toBottomOf="@id/app_logo" />

            <LinearLayout
                android:id="@+id/layoutCreateAlarm"
                android:layout_width="0dp"
                android:layout_height="150dp"
                android:orientation="horizontal"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintStart_toStartOf="@id/app_logo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/create_alarm_title" >

                <android.widget.Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_marginEnd="16dp"
                    android:textAllCaps="false"
                    android:background="@drawable/ripple_round_corners_stroke_white_background"
                    android:backgroundTint="@color/teal_700"
                    android:padding="16dp"
                    android:text="@string/create_new_geo_alarm"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:gravity="bottom|start" />

                <android.widget.Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1.7"
                    android:padding="16dp"
                    android:textAllCaps="false"
                    android:background="@drawable/ripple_round_corners_stroke_white_background"
                    android:backgroundTint="@color/teal_200"
                    android:gravity="bottom|start"
                    android:textSize="20sp"
                    android:text="@string/create_new_hour_alarm" />
            </LinearLayout>

            <TextView
                android:id="@+id/tvAlarmsOn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/alarms_on"
                style="@style/BasicText"
                android:layout_marginTop="16dp"
                app:layout_constraintStart_toStartOf="@id/app_logo"
                app:layout_constraintTop_toBottomOf="@+id/layoutCreateAlarm" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvAlarmsOn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                tools:listitem="@layout/adapter_alarm"
                android:nestedScrollingEnabled="false"
                tools:itemCount="2"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="16dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintTop_toBottomOf="@id/tvAlarmsOn"
                app:layout_constraintStart_toStartOf="@id/app_logo"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/tvAlarmsOff"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/alarms_off"
                style="@style/BasicText"
                android:layout_marginTop="16dp"
                app:layout_constraintStart_toStartOf="@id/app_logo"
                app:layout_constraintTop_toBottomOf="@+id/rvAlarmsOn" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvAlarmsOff"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                tools:listitem="@layout/adapter_alarm"
                android:nestedScrollingEnabled="false"
                tools:itemCount="2"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="16dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintTop_toBottomOf="@id/tvAlarmsOff"
                app:layout_constraintStart_toStartOf="@id/app_logo"
                app:layout_constraintEnd_toEndOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</layout>