<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <import type="android.view.View"/>
        <variable
            name="viewModel"
            type="com.joanderson.geocuco.view.createalarm.CreateAlarmViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tvDefineAlarmPlace"
            style="@style/BasicText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/define_location"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/miniMapLayout"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            app:cardCornerRadius="33dp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/tvDefineAlarmPlace">

            <androidx.fragment.app.FragmentContainerView
                android:id="@+id/mini_map"
                android:name="com.google.android.gms.maps.SupportMapFragment"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tv_define_alarm_name"
            style="@style/BasicText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/define_alarm_name"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/miniMapLayout" />

        <EditText
            android:id="@+id/etAlarmName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/round_corners_stroke_white_background"
            android:hint="@string/hint_house_work"
            android:text="@={viewModel.alarmName}"
            android:inputType="textShortMessage"
            android:maxLines="1"
            android:paddingVertical="8dp"
            android:paddingHorizontal="16dp"
            android:textColorHint="@color/teal_700"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_define_alarm_name"
            android:autofillHints="alarm name" />

        <TextView
            android:id="@+id/tvDefineAlarmDayOfWeek"
            style="@style/BasicText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/repeat_alarm"
            app:layout_constraintEnd_toStartOf="@+id/switchRepeatAlarm"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etAlarmName" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/switchRepeatAlarm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="@={viewModel.repeatAlarm}"
            app:layout_constraintBottom_toBottomOf="@+id/tvDefineAlarmDayOfWeek"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tvDefineAlarmDayOfWeek" />

        <ca.antonious.materialdaypicker.MaterialDayPicker
            android:id="@+id/dayPicker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:visibility="@{viewModel.repeatAlarmLiveData == true ? View.VISIBLE : View.GONE}"
            tools:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvDefineAlarmDayOfWeek" />

        <TextView
            android:id="@+id/tvDefineTimeInterval"
            style="@style/BasicText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/define_time_interval"
            app:layout_constraintEnd_toStartOf="@+id/switchTimeInterval"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dayPicker" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/switchTimeInterval"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="@={viewModel.showTimeInterval}"
            app:layout_constraintBottom_toBottomOf="@+id/tvDefineTimeInterval"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tvDefineTimeInterval" />

        <LinearLayout
            android:id="@+id/layoutTimeInterval"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="16dp"
            android:visibility="@{viewModel.showTimeIntervalLiveData == true ? View.VISIBLE : View.GONE}"
            tools:visibility="visible"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/switchTimeInterval">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/BasicText"
                android:layout_marginEnd="16dp"
                android:text="@string/from" />

            <TextView
                android:id="@+id/btStartTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_weight="1"
                android:textColor="@color/teal_700"
                android:textSize="16sp"
                android:gravity="center_horizontal"
                android:paddingVertical="8dp"
                android:background="@drawable/ripple_round_corners_stroke_white_background"
                android:text="@{viewModel.startTime}"
                tools:text="11h00"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/BasicText"
                android:layout_marginEnd="16dp"
                android:text="@string/to" />

            <TextView
                android:id="@+id/btFinnishTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/teal_700"
                android:textSize="16sp"
                android:gravity="center_horizontal"
                android:paddingVertical="8dp"
                android:background="@drawable/ripple_round_corners_stroke_white_background"
                android:text="@{viewModel.finnishTime}"
                tools:text="12h00" />
        </LinearLayout>

        <Button
            android:id="@+id/btMapsSearchConfirmPlace"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save_new_alarm"
            android:background="@drawable/round_corners_white_background"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="16dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>